--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
     position: relative;
     overflow: hidden;
     background-color: #000;
+    text-shadow: 1px 1px 1px #000;
 
     .video-wrapper {
         position: absolute;
@@ -14,6 +15,10 @@
         z-index: 0;
     }
 
+    h2 {
+        margin: 0;
+    }
+
     .container {
         position:relative;
         z-index: 1;
@@ -21,6 +26,10 @@
         justify-content: center;
         align-items: stretch;
         height: 100%;
+
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+        }
     }
 
     .left-col, .right-col {
@@ -30,10 +39,21 @@
         align-items: center;
         position: relative;
         flex-direction: column;
+        @media screen and (max-width: 768px) {
+            flex: auto;
+        }
+    }
+
+    .default-msg {
+        font-weight: 600;
+        font-size: 20px;
     }
 
     .img-control {
         width: 80px;
+        @media screen and (max-width: 768px) {
+            width: 50px;
+        }
     }
 
     .control-container {
@@ -49,6 +69,11 @@
         margin: 10px auto;
         display: flex;
         justify-content: space-between;
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+            justify-content: start;
+            margin: 0 auto;
+        }
     }
 
     .instruments-container {
@@ -56,6 +81,10 @@
         width: 100%;
         position: relative;
         height: 300px;
+
+        @media screen and (max-width: 768px) {
+            height: 150px;
+        }
     }
 
     .instrument {
@@ -69,6 +98,23 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+
+            .play-btn {
+                height: 45px;
+                width: 45px;
+                border-radius: 50%;
+                font-family: "Winky Sans", sans-serif;
+                text-transform: uppercase;
+                line-height: 100%;
+                font-size: 16px;
+                
+                &.red {
+                    background-color: rgb(191, 218, 111);
+                }
+                &.green {
+                    background-color: rgb(119, 217, 119);
+                }
+            }
         }
 
         &.flute {
@@ -105,6 +151,24 @@
         .name {
             font-weight: bold;
             text-shadow: 1px 1px 2px #000;
+        }
+
+        @media screen and (max-width: 768px) {
+            &.shamisen, &.hichiriki {
+                left: 12px;
+            }
+            &.biwa, &.taiko {
+                right: 12px;
+            }
+            &.flute {
+                top: -25px;
+                left: 35%;
+            }
+            &.horagai {
+                bottom: -15px;
+                left: 65%;
+            }
+            
         }
     }
 }
