--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,9 @@
 
     h2 {
         margin: 0;
+        @media screen and (max-width: 768px) {
+            margin-top: 12px;
+        }
     }
 
     .container {
@@ -41,6 +44,7 @@
         flex-direction: column;
         @media screen and (max-width: 768px) {
             flex: auto;
+            justify-content: flex-start;
         }
     }
 
@@ -68,11 +72,31 @@
         width: 80%;
         margin: 10px auto;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: center;
+
+        label, input {
+            margin-right: 20px;
+            font-size: 18px;
+        }
+        input {
+            border-radius: 12px;
+            height: 20px;
+            padding: 6px;
+        }
+
         @media screen and (max-width: 768px) {
             flex-direction: column;
             justify-content: start;
             margin: 0 auto;
+
+            label, input {
+                margin: 0;
+            }
+            input {
+                height: 14px;
+                font-size: 14px;
+            }
         }
     }
 
