--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,7 @@
     h2 {
         margin: 0;
         @media screen and (max-width: 768px) {
-            margin-top: 12px;
+            margin-top: 32px;
         }
     }
 
@@ -43,6 +43,15 @@
             cursor: pointer;
             width: 140px;
             background-color: rgba(255, 181, 251, 0.5);
+
+        }
+        @media screen and (max-width: 768px) {
+            justify-content: space-between;
+            span {
+                font-size: 12px;
+                padding: 2px;
+                width: 100px;
+            }
         }
     }
 
@@ -119,6 +128,10 @@
             input {
                 height: 14px;
                 font-size: 14px;
+                background-color: #141414;
+                border-radius: 24px;
+                width: 180px;
+                height: 20px;
             }
         }
     }
